added additional tests to sign.in.ctr.spec

--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-strap": "*",
     "bootstrap": "*",
     "moment": "*",
-    "ngAnimate": "*"
+    "ngAnimate": "*",
+    "mockfirebase": "*"
 
   },
   "devDependencies": {
