--- a/bower.json
+++ b/bower.json
@@ -8,16 +8,13 @@
     "angular-touch": "~1.3.4",
     "angular-sanitize": "~1.3.4",
     "angular-ui-router": "~0.2.13",
-    "angular-material": "*",
-    "angular": "*",
-    "lodash": "*",
-    "angularfire": "*",
-    "font-awesome": "*",
-    "angular-strap": "*",
-    "bootstrap": "*",
-    "moment": "*",
+    "angular": "1.3.15",
+    "lodash": "3.8.0",
+    "angularfire": "1.1.1",
+    "font-awesome": "4.3.0",
+    "moment": "2.10.3",
     "ngAnimate": "*",
-    "mockfirebase": "*"
+    "angular-material": "0.9.4"
 
   },
   "devDependencies": {
